exports[`Button container default to empty text 1`] = `
<a
  className="ca-btn ca-btn--important"
  onClick={[Function]}>
  
</a>
`;

exports[`Button container render correctly 1`] = `
<a
  className="ca-btn ca-btn--important"
  onClick={[Function]}>
  The text to display
</a>
`;
